--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
+    "@glimmer/component": "^1.1.2",
     "broccoli-replace": "^0.12.0",
     "ember-cli-babel": "^7.12.0",
     "ember-cli-htmlbars": "^6.0.0"
