--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@glimmer/component": "^1.1.2",
     "broccoli-replace": "^0.12.0",
     "ember-cli-babel": "^7.12.0",
-    "ember-cli-htmlbars": "^6.0.0"
+    "ember-cli-htmlbars": "6.3.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.0.0",
