--- a/package.json
+++ b/package.json
@@ -23,35 +23,38 @@
   },
   "dependencies": {
     "@glimmer/component": "^1.1.2",
-    "broccoli-replace": "^0.12.0",
-    "ember-cli-babel": "^7.12.0",
+    "broccoli-replace": "^2.0.2",
+    "ember-auto-import": "^2.7.2",
+    "ember-cli-babel": "8.2.0",
     "ember-cli-htmlbars": "6.3.0"
   },
   "devDependencies": {
-    "@ember/optional-features": "^1.0.0",
+    "@ember/optional-features": "^2.1.0",
+    "@ember/test-helpers": "^3.3.0",
+    "@glimmer/component": "^1.1.2",
+    "@glimmer/tracking": "^1.1.2",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-ajax": "^3.1.0",
-    "ember-cli": "~3.4.3",
-    "ember-cli-dependency-checker": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
-    "ember-cli-inject-live-reload": "^1.8.2",
-    "ember-cli-qunit": "^4.3.2",
+    "ember-cli": "~5.8.1",
+    "ember-cli-dependency-checker": "^3.3.2",
+    "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^2.1.0",
-    "ember-concurrency": "2.2.1",
+    "ember-concurrency": "4.0.2",
     "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^2.1.0",
-    "ember-resolver": "^5.3.0",
-    "ember-source": "3.12.0",
-    "ember-source-channel-url": "^2.0.1",
-    "ember-template-lint": "^1.5.3",
-    "ember-try": "^1.0.0",
-    "eslint": "^6.4.0",
-    "eslint-plugin-ember": "^7.1.0",
-    "eslint-plugin-node": "^10.0.0",
+    "ember-load-initializers": "^2.1.2",
+    "ember-qunit": "^8.0.2",
+    "ember-resolver": "^11.0.1",
+    "ember-source": "5.8.0",
+    "ember-source-channel-url": "^3.0.0",
+    "ember-template-lint": "^6.0.0",
+    "ember-try": "^3.0.0",
+    "eslint": "^9.1.1",
+    "eslint-plugin-ember": "^12.0.2",
+    "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.9.0"
+    "qunit": "^2.20.1",
+    "qunit-dom": "^3.1.2",
+    "webpack": "^5.91.0"
   },
   "peerDependencies": {
     "ember-concurrency": "2.2.1"
@@ -59,7 +62,16 @@
   "engines": {
     "node": "8.* || >= 10.*"
   },
+  "volta": {
+    "node": "18.18.0"
+  },
+  "ember": {
+    "edition": "octane"
+  },
   "ember-addon": {
     "configPath": "tests/dummy/config"
+  },
+  "overrides": {
+    "ember-cli-babel": "8.2.0"
   }
 }
